# foxcheck

./: .gitignore  .replit  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-Asyn-1729647579145.txt  Pasted-INFO-172-31-196-136-35860-POST-users-token-HTTP-1-1-500-Internal-Server-Error-ERROR-Ex-1729605070700.txt  Pasted-INFO-172-31-196-202-44214-POST-api-articles-HTTP-1-1-500-Internal-Server-Error-ERROR-E-1729785669968.txt  Pasted-INFO-172-31-196-202-60560-POST-api-articles-HTTP-1-1-500-Internal-Server-Error-ERROR-E-1729785194018.txt  Pasted-INFO-172-31-196-53-46978-GET-static-js-articles-js-HTTP-1-1-304-Not-Modified-ERROR-databas-1729650207677.txt  Pasted-INFO-172-31-196-53-50298-GET-api-articles-HTTP-1-1-500-Internal-Server-Error-ERROR-Exc-1729648278042.txt  Pasted-INFO-172-31-196-83-38098-PUT-api-admin-articles-1-HTTP-1-1-500-Internal-Server-Error-ERROR-1730570158981.txt  Pasted-class-Article-db-Model-id-db-Column-db-Integer-primary-key-True-title-db-Column-db-S-1729644598941.txt  README.md  auth.py  auth_backend.py  config.py  crud.py  database.py  experiment.py  langgraph.json  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  schemas.py  sdg.py
agents/: statement_checker.py
ai/: chainlit_interface.py  langchain_interface.py
chainlit/: app.py
chains/: adjudicator_chain.py  article_metadata_chain.py  arxiv_chain.py  fact_check_chain.py  query_chain.py  statement_chain.py  tavily_chain.py  wikipedia_chain.py
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
(+41 files in other folders)
